--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,35 @@ body {
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    font-family: 'Helvetica', 'Anton', 'Oswald', sans-serif;
 }
 
 body {
     background-color: #DDD;
 }
 
+.title {
+    font-family: 'Anton', 'Oswald', sans-serif;
+    font-size: 16vw;
+    width: 95vw;
+    max-width: 1300px;
+    margin: 0px auto 0px auto;
+}
+
+.title span {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+@media (min-width: 600px) {
+    .title {
+        font-size: 6rem;
+    }
+}
+
 .app-box {
-    width: 90vw;
+    width: 95vw;
+    max-width: 1300px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -35,10 +56,29 @@ body {
 
 /* .bottom-buttons {} */
 
+.copyBtnAndEditor {
+    position: relative;
+}
+
+.copyBtn {
+    position: absolute;
+    top: 1px;
+    right: 1px;
+    background-color: rgba(0, 0, 0, 0.2);
+    border: none;
+    border-radius: 1px;
+    padding: 2px 5px 0px 5px;
+}
+
+.copyBtn img {
+    width: 1.4rem;
+}
+
 .editor {
     width: 100%;
-    min-height: 1rem;
-    padding: 5px 5px 5px 8px;
+    min-height: 12rem;
+    padding: 1.7rem 0.7rem 0.7rem 0.7rem;
+    border-radius: 2px;
     resize: none;
     outline: none;
     background-color: white;
@@ -52,23 +92,6 @@ body {
 }
 
 .editor[contenteditable][placeholder]:empty:before {
-    content: attr(placeholder);
-    position: absolute;
-    color: gray;
-    background-color: transparent;
-}
-
-.output {
-    width: 100%;
-    min-height: 1rem;
-    padding: 5px 5px 5px 8px;
-    resize: none;
-    outline: none;
-    background-color: #EEE;
-    border: 1px solid #CCC;
-}
-
-.output[contenteditable][placeholder]:empty:before {
     content: attr(placeholder);
     position: absolute;
     color: gray;
