--- a/css/style.css
+++ b/css/style.css
@@ -5,22 +5,27 @@
 }
 
 
+/* verde #06D6A2 - preto #4C4859*/
+
+
 /* colocar um título " ACHE NO TEXTO " bem grande com a palavra ACHE selecionada com o fundo escuro ou colorido e a cor da fonte clara(contrário do restante to texto)*/
 
 html,
 body {
     box-sizing: border-box;
+    height: 100%;
     margin: 0px;
     padding: 0px;
     font-family: 'Helvetica', 'Anton', 'Oswald', sans-serif;
 }
 
 body {
-    background-color: #DDD;
+    background-color: #f7f7f7;
 }
 
 .title {
     font-family: 'Anton', 'Oswald', sans-serif;
+    color: #3a2637;
     font-size: 16vw;
     width: 95vw;
     max-width: 1300px;
@@ -36,6 +41,17 @@ body {
     .title {
         font-size: 6rem;
     }
+}
+
+.editorInfo {
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 2px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.editorInfoSpan {
+    padding: 3px;
 }
 
 .app-box {
@@ -77,7 +93,7 @@ body {
 .editor {
     width: 100%;
     min-height: 12rem;
-    padding: 1.7rem 0.7rem 0.7rem 0.7rem;
+    padding: 1.2rem 2rem 1.2rem 1.4rem;
     border-radius: 2px;
     resize: none;
     outline: none;
@@ -87,8 +103,8 @@ body {
 
 .regexSelection {
     display: inline;
-    background-color: #607D8B;
-    color: white;
+    background-color: #06D6A2;
+    color: #4C4859;
 }
 
 .editor[contenteditable][placeholder]:empty:before {
