--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 html,
 body {
     box-sizing: border-box;
-    height: 100%;
+    height: 100vw;
     margin: 0px;
     padding: 0px;
     font-family: 'Helvetica', 'Anton', 'Oswald', sans-serif;
@@ -30,6 +30,7 @@ body {
     width: 95vw;
     max-width: 1300px;
     margin: 0px auto 0px auto;
+    text-align: center;
 }
 
 .title span {
@@ -42,6 +43,17 @@ body {
         font-size: 6rem;
     }
 }
+
+.resultBox {
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 22px;
+}
+
+.numberOfMatches {}
 
 .editorInfo {
     background-color: rgba(0, 0, 0, 0.1);
@@ -91,8 +103,9 @@ body {
 }
 
 .editor {
+    display: inline-block;
     width: 100%;
-    min-height: 12rem;
+    min-height: 16rem;
     padding: 1.2rem 2rem 1.2rem 1.4rem;
     border-radius: 2px;
     resize: none;
@@ -112,4 +125,12 @@ body {
     position: absolute;
     color: gray;
     background-color: transparent;
+}
+
+.footer {
+    width: 100%;
+    max-width: 1300px;
+    height: 100px;
+    background-color: #4C4859;
+    display: flex;
 }
