--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,12 @@
 }
 
 :root {
-    --main-color: #000;
+    --main-color: blue;
     --light: #f8f9fa;
-    --white: #FFF;
+    --white-background: #FFF;
+    --gray-background: #f5f5f5;
+    --light-gray-text: #575757;
+    --dark-gray-text: #181818;
 }
 
 
@@ -26,46 +29,53 @@ body {
 }
 
 body {
-    background-color: #f5f5f5;
+    background-color: var(--gray-background);
 }
 
 
 /* -- HEADER -- */
 
 .header {
-    background-color: var(--white);
+    background-color: var(--white-background);
+}
+
+.header-top-container {
     display: flex;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 7px 15px;
 }
 
-.header-logo {}
-
-.title {
-    /* font-family: 'Anton', 'Oswald', sans-serif; */
-    color: #3a2637;
-    /* font-size: 16vw;
-    width: 95vw;
-    max-width: 1300px;
-    margin: 0px auto 0px auto;
-    text-align: center; */
+.header-top-container img {
+    height: 60px;
+    margin: auto 15px auto 0px;
 }
 
-.header-description {}
-
-
-/* .title span {
-    margin-top: 0px;
-    margin-bottom: 0px;
+.header-top-container p {
+    margin: auto 0px;
+    color: var(--dark-gray-text);
 }
 
-@media (min-width: 600px) {
-    .title {
-        font-size: 6rem;
-    }
-} */
+.line {
+    height: 5px;
+    width: 100%;
+    background-color: var(--main-color);
+}
 
-.menu-line {}
+.header-bottom-container {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 7px 15px;
+}
 
 .tool-bar {}
+
+.tool-bar a {
+    text-decoration: none;
+    color: var(--light-gray-text);
+}
 
 .resultBox {
     background-color: rgba(0, 0, 0, 0.2);
@@ -89,11 +99,19 @@ body {
     padding: 3px;
 }
 
+.app {
+    width: 100%;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
 .app-box {
     width: 95vw;
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 1rem;
+    color: var(--dark-gray-text);
 }
 
 .buttons {
@@ -150,10 +168,52 @@ body {
     background-color: transparent;
 }
 
+
+/* DESCRIPTION SESSION */
+
+.description {
+    background-color: var(--white-background);
+    width: 100%;
+    color: var(--light-gray-text);
+}
+
+.description-box {
+    width: 95vw;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 1rem;
+}
+
+.description-box h2 {
+    margin: 0px;
+    padding: 20px 0px;
+}
+
+.description-box h2,
+.description-box .h2-description,
+.description-box h3 {
+    text-align: center;
+}
+
+
+/* FOOTER */
+
 .footer {
     width: 100%;
-    max-width: 1300px;
     height: 100px;
-    background-color: #4C4859;
+    margin-top: auto;
     display: flex;
+}
+
+.footer-box {
+    width: 95vw;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    color: var(--menu-text);
+}
+
+.footer-box a {
+    text-decoration: none;
 }
